build/log/idf_py_stdout_output_79328
[1/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\noahl\esp\crypto\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.2_py3.11_env\Scripts\python.exe C:/Users/noahl/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/noahl/esp/crypto/build/bootloader/bootloader.bin"
Bootloader binary size 0x6860 bytes. 0x7a0 bytes (7%) free.
[2/8] Building C object esp-idf/CycloneCRYPTO/CMakeFiles/__idf_CycloneCRYPTO.dir/cipher/aes.c.obj
FAILED: esp-idf/CycloneCRYPTO/CMakeFiles/__idf_CycloneCRYPTO.dir/cipher/aes.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20230928\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.2.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/noahl/esp/crypto/build/config -IC:/Users/noahl/esp/crypto/components/CycloneCRYPTO/core -IC:/Users/noahl/esp/crypto/components/CycloneCRYPTO/cipher -IC:/Users/noahl/esp/crypto/components/CycloneCRYPTO -IC:/Users/noahl/esp/esp-idf/components/newlib/platform_include -IC:/Users/noahl/esp/esp-idf/components/freertos/config/include -IC:/Users/noahl/esp/esp-idf/components/freertos/config/include/freertos -IC:/Users/noahl/esp/esp-idf/components/freertos/config/xtensa/include -IC:/Users/noahl/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/noahl/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/noahl/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Users/noahl/esp/esp-idf/components/freertos/esp_additions/include -IC:/Users/noahl/esp/esp-idf/components/esp_hw_support/include -IC:/Users/noahl/esp/esp-idf/components/esp_hw_support/include/soc -IC:/Users/noahl/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -IC:/Users/noahl/esp/esp-idf/components/esp_hw_support/port/esp32/. -IC:/Users/noahl/esp/esp-idf/components/heap/include -IC:/Users/noahl/esp/esp-idf/components/log/include -IC:/Users/noahl/esp/esp-idf/components/soc/include -IC:/Users/noahl/esp/esp-idf/components/soc/esp32 -IC:/Users/noahl/esp/esp-idf/components/soc/esp32/include -IC:/Users/noahl/esp/esp-idf/components/hal/platform_port/include -IC:/Users/noahl/esp/esp-idf/components/hal/esp32/include -IC:/Users/noahl/esp/esp-idf/components/hal/include -IC:/Users/noahl/esp/esp-idf/components/esp_rom/include -IC:/Users/noahl/esp/esp-idf/components/esp_rom/include/esp32 -IC:/Users/noahl/esp/esp-idf/components/esp_rom/esp32 -IC:/Users/noahl/esp/esp-idf/components/esp_common/include -IC:/Users/noahl/esp/esp-idf/components/esp_system/include -IC:/Users/noahl/esp/esp-idf/components/esp_system/port/soc -IC:/Users/noahl/esp/esp-idf/components/esp_system/port/include/private -IC:/Users/noahl/esp/esp-idf/components/xtensa/esp32/include -IC:/Users/noahl/esp/esp-idf/components/xtensa/include -IC:/Users/noahl/esp/esp-idf/components/xtensa/deprecated_include -IC:/Users/noahl/esp/esp-idf/components/lwip/include -IC:/Users/noahl/esp/esp-idf/components/lwip/include/apps -IC:/Users/noahl/esp/esp-idf/components/lwip/include/apps/sntp -IC:/Users/noahl/esp/esp-idf/components/lwip/lwip/src/include -IC:/Users/noahl/esp/esp-idf/components/lwip/port/include -IC:/Users/noahl/esp/esp-idf/components/lwip/port/freertos/include -IC:/Users/noahl/esp/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/noahl/esp/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/noahl/esp/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/noahl/esp/crypto/components/Common/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/noahl/esp/crypto=. -fmacro-prefix-map=C:/Users/noahl/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/CycloneCRYPTO/CMakeFiles/__idf_CycloneCRYPTO.dir/cipher/aes.c.obj -MF esp-idf\CycloneCRYPTO\CMakeFiles\__idf_CycloneCRYPTO.dir\cipher\aes.c.obj.d -o esp-idf/CycloneCRYPTO/CMakeFiles/__idf_CycloneCRYPTO.dir/cipher/aes.c.obj -c C:/Users/noahl/esp/crypto/components/CycloneCRYPTO/cipher/aes.c
C:/Users/noahl/esp/crypto/components/CycloneCRYPTO/cipher/aes.c: In function 'aesInit':
C:/Users/noahl/esp/crypto/components/CycloneCRYPTO/cipher/aes.c:341:24: error: format '%d' expects argument of type 'int', but argument 3 has type 'uint32_t' {aka 'long unsigned int'} [-Werror=format=]
  341 |       printf("ek[%d]: %d\n", i, context->ek[i]);
      |                       ~^        ~~~~~~~~~~~~~~
      |                        |                   |
      |                        int                 uint32_t {aka long unsigned int}
      |                       %ld
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
